// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maskMode renders 0 1`] = `
Array [
  .c0 {
  -webkit-mask-mode: 0;
  mask-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-mode: 0;
  mask-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-mode: 0;
  mask-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-mode: 0;
  mask-mode: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`maskMode renders function 1`] = `
Array [
  .c0 {
  -webkit-mask-mode: hasnot;
  mask-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-mode: has;
  mask-mode: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-mode: hasnot;
  mask-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-mode: has;
  mask-mode: has;
}

<div
    className="c0"
  />,
]
`;

exports[`maskMode renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-mask-mode: invalid.path.1;
  mask-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-mode: invalid.path.1;
  mask-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-mode: invalid.path.1;
  mask-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-mode: invalid.path.1;
  mask-mode: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`maskMode renders negative number 1`] = `
Array [
  .c0 {
  -webkit-mask-mode: -54881;
  mask-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-mode: -54881;
  mask-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-mode: -42365;
  mask-mode: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-mode: -42365;
  mask-mode: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maskMode renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-mask-mode: July;
    mask-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-mode: August;
    mask-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-mode: September;
    mask-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-mode: November;
    mask-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-mask-mode: July;
    mask-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-mode: August;
    mask-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-mode: September;
    mask-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-mode: November;
    mask-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-mode: May;
    mask-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-mode: June;
    mask-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-mode: April;
    mask-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-mode: November;
    mask-mode: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-mode: May;
    mask-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-mode: June;
    mask-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-mode: April;
    mask-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-mode: November;
    mask-mode: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskMode renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-mask-mode: July;
    mask-mode: July;
  }
}

@media April {
  .c0 {
    -webkit-mask-mode: August;
    mask-mode: August;
  }
}

@media January {
  .c0 {
    -webkit-mask-mode: September;
    mask-mode: September;
  }
}

@media April {
  .c0 {
    -webkit-mask-mode: November;
    mask-mode: November;
  }
}

@media June {
  .c0 {
    -webkit-mask-mode: August;
    mask-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-mask-mode: July;
    mask-mode: July;
  }
}

@media April {
  .c0 {
    -webkit-mask-mode: August;
    mask-mode: August;
  }
}

@media January {
  .c0 {
    -webkit-mask-mode: September;
    mask-mode: September;
  }
}

@media April {
  .c0 {
    -webkit-mask-mode: November;
    mask-mode: November;
  }
}

@media June {
  .c0 {
    -webkit-mask-mode: August;
    mask-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-mode: January;
    mask-mode: January;
  }
}

@media April {
  .c0 {
    -webkit-mask-mode: December;
    mask-mode: December;
  }
}

@media January {
  .c0 {
    -webkit-mask-mode: April;
    mask-mode: April;
  }
}

@media April {
  .c0 {
    -webkit-mask-mode: May;
    mask-mode: May;
  }
}

@media June {
  .c0 {
    -webkit-mask-mode: June;
    mask-mode: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-mode: January;
    mask-mode: January;
  }
}

@media April {
  .c0 {
    -webkit-mask-mode: December;
    mask-mode: December;
  }
}

@media January {
  .c0 {
    -webkit-mask-mode: April;
    mask-mode: April;
  }
}

@media April {
  .c0 {
    -webkit-mask-mode: May;
    mask-mode: May;
  }
}

@media June {
  .c0 {
    -webkit-mask-mode: June;
    mask-mode: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskMode renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-mask-mode: 54881;
  mask-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-mode: 54881;
  mask-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-mode: 42365;
  mask-mode: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-mode: 42365;
  mask-mode: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maskMode renders string 1`] = `
Array [
  .c0 {
  -webkit-mask-mode: July;
  mask-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-mode: July;
  mask-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-mode: June;
  mask-mode: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-mode: June;
  mask-mode: June;
}

<div
    className="c0"
  />,
]
`;

exports[`maskMode renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-mask-mode: DarkSlateBlue;
  mask-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-mode: DarkSlateBlue;
  mask-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-mode: DarkSlateBlue;
  mask-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-mode: DarkSlateBlue;
  mask-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
